--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body {
 	background-image: url('../images/textile_photo.jpeg');
 	background-size: 100% auto;
   background-repeat: no-repeat;
+  background-color: #302013;
 	margin: 2em 0 5em 0;
 }
 
